# work_timer

./: Cargo.toml  README.md  index.html  run.sh
.cargo/: config.toml
files/: config.html
src/: battery.rs  chip8.rs  display.rs  ec11.rs  event.rs  main.rs  main_bak.rs  random.rs  request.rs  sleep.rs  sound.rs  storage.rs  utils.rs  weather.rs  web_service.rs  wifi.rs  worldtime.rs
src/model/: mod.rs  seniverse.rs  timer_log.rs
src/pages/: calendar_page.rs  calender_page.rs  clock_page.rs  count_down_page.rs  games_page.rs  init_page.rs  main_page.rs  mod.rs  qrcode_page.rs  setting_page.rs  timer_page.rs  weather_page.rs
src/widgets/: battery_widget.rs  calendar.rs  calender.rs  clock_widget.rs  list_widget.rs  mod.rs  qrcode_widget.rs  scroll_bar.rs
